Colaboratory を使用して作成しました

--- a/math_en_wiki.ipynb
+++ b/math_en_wiki.ipynb
@@ -6,7 +6,7 @@
       "name": "math_en_wiki.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMpC7UgfaAVk/fFsvRwp8Zi",
+      "authorship_tag": "ABX9TyMZQJynN8m2Bq54hPLM1Ko/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1386,15 +1386,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "i075TnhyyTXL"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "%%latex\n",
@@ -1415,7 +1406,7 @@
           "height": 173
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1430,93 +1421,83 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "i075TnhyyTXL"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# 方程式 equation\n",
-        "[dismiss]\n",
-        "Commutative Property of Addition\n",
-        "Addition Property of Equality\n",
-        "Subtraction Property of Equality\n",
-        "Lesson\n",
-        "It is very important to show math in the simplest way. \n",
-        "For example, {\\displaystyle {\\frac {5}{10}}}{\\displaystyle {\\frac {5}{10}}} is the\n",
-        " same as {\\displaystyle {\\frac {1}{2}}}{\\frac  {1}{2}}, but {\\displaystyle {\\frac {1}{2}}}{\\frac  {1}{2}} is better because it is easier to understand. The simplest answer is usually the best.\n",
-        "\n",
-        "Associative Properties mean that you can do the problem in any order, and the answer will always be the same.\n",
-        "\n",
-        "Commutative Properties mean that you can change the order of numbers around, and the answers will always be the same.\n",
-        "\n",
-        "Equality Properties state that if two numbers on either side of the equation are equal, and the operation processed is the same, as well having the same variables in the operations, the result will be the same for both sides of the equation. Read the section devoted to the Addition and Subtraction Properties of Equality for more information.\n",
-        "\n",
-        "Associative Property of Addition\n",
-        "The associative property of addition shows us that when adding multiple values together, the outcome will always be the same. You can group numbers together in parenthesis, and it will still end up having the same outcome. For example, {\\displaystyle 3+(4+5)=(3+4)+5}{\\displaystyle 3+(4+5)=(3+4)+5}. The order remains the same, but the grouping has changed. The result, however, is consistent.\n",
-        "\n",
-        "Associative Property of Multiplication\n",
-        "The associative properties work for both addition and multiplication. Think of grouping {\\displaystyle 3\\times 3}{\\displaystyle 3\\times 3} together. You end up with 9. What about {\\displaystyle 3\\times (3\\times 4)}{\\displaystyle 3\\times (3\\times 4)}? If we change the grouping here, the result will be the same. Try to visualize why this is. When multiplying, you're often building objects in rows and columns.\n",
-        "\n",
-        "For example, a 2 inch {\\displaystyle \\times }\\times  4 inch block will be 2 inches across, and 4 downward. If you had a block 4 inches across and 2 inches downward, it would be the same size overall. When you put objects in parenthesis, remember to do those operations first. You may end up with certain \"sides\" of the operation or object being larger or smaller, but the total area will always have the same outcome.\n",
-        "\n",
-        "Commutative Property of Addition\n",
-        "The commutative property of addition shows that no matter what order numbers are in when we add them, the result will always be the same. For example, {\\displaystyle x+y=y+x}{\\displaystyle x+y=y+x}, just how {\\displaystyle 3+4=4+3}{\\displaystyle 3+4=4+3}. Even though the order in which we added has shifted, the result doesn't change, and the statements on both sides of the equal sign remain true.\n",
-        "\n",
-        "Addition Property of Equality\n",
-        "The addition property of equality states that if two variables or numbers are equal to each other on each side of the equation, and the operation they go through is alike, the resulting sum will be the same. If for example, both {\\displaystyle x}x and y are 6, and you add {\\displaystyle z}z to each of them, that is,\n",
-        "\n",
-        "if {\\displaystyle x=y}x=y then {\\displaystyle x+z=y+z}{\\displaystyle x+z=y+z}\n",
-        "\n",
-        "or if {\\displaystyle 6=6}{\\displaystyle 6=6} then {\\displaystyle 6+z=6+z}{\\displaystyle 6+z=6+z}\n",
-        "\n",
-        "Subtraction Property of Equality\n",
-        "The subtraction property of equality states that if two variables or numbers are equal to each other on each side of the equation, and the operation they go through is alike, the resulting difference will be the same. If for example, both {\\displaystyle x}x and y are 6, and you subtract {\\displaystyle z}z from each of them, that is,\n",
-        "\n",
-        "if {\\displaystyle x=y}x=y then {\\displaystyle x-z=y-z}{\\displaystyle x-z=y-z}\n",
-        "\n",
-        "or if {\\displaystyle 6=6}{\\displaystyle 6=6} then {\\displaystyle 6-z=6-z}{\\displaystyle 6-z=6-z}\n",
-        "\n",
-        "Example Problems\n",
-        "Find {\\displaystyle x}x where {\\displaystyle y=6}{\\displaystyle y=6}.\n",
-        "\n",
-        "\n",
-        "{\\displaystyle {\\frac {x+y}{2}}=14}{\\displaystyle {\\frac {x+y}{2}}=14}\n",
-        "{\\displaystyle {\\frac {x+6}{2}}=14}{\\displaystyle {\\frac {x+6}{2}}=14}\n",
-        "Substituting 6 for y using the given y\n",
-        "{\\displaystyle 2\\left({\\frac {x+6}{2}}\\right)=2(14)}{\\displaystyle 2\\left({\\frac {x+6}{2}}\\right)=2(14)}\n",
-        "By multiplying the denominator on either side simplifies it\n",
-        "{\\displaystyle x+6=28}{\\displaystyle x+6=28}\n",
-        "Taking down the parentheses\n",
-        "{\\displaystyle x+6-6=28-6}{\\displaystyle x+6-6=28-6}\n",
-        "Subtracting 6 on both side does not affect the property of the given formula but again simplifies it\n",
-        "{\\displaystyle x=22}{\\displaystyle x=22}\n",
-        "To arrive at the answer\n",
-        "\n",
-        "{\\displaystyle (x-3y)+2x=15}{\\displaystyle (x-3y)+2x=15}\n",
-        "{\\displaystyle (x-3\\times 6)+2x=15}{\\displaystyle (x-3\\times 6)+2x=15}\n",
-        "Again taking the hints as given, {\\displaystyle y=6}{\\displaystyle y=6}\n",
-        "{\\displaystyle (x-18)+2x=15}{\\displaystyle (x-18)+2x=15}\n",
+        "# 方程式 equation の変形\n",
+        "# 交換法則 commutative property\n",
+        "# 結合法則 associative property\n",
+        "# 分配法則 distributive property\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\\text{Find} \\quad x \\quad \\text{where} \\quad y=6 \\\\[0.8em]\n",
+        "\\frac {x+y}{2}=14 \\\\[0.8em]\n",
+        "\\frac {x+6}{2}=14 \\\\[0.8em]\n",
+        "2\\left({\\frac {x+6}{2}}\\right)=2(14) \\\\[0.8em]\n",
+        "x+6=28 \\\\[0.8em]\n",
+        "x+6-6=28-6 \\\\[0.8em]\n",
+        "x=22 \\\\[0.8em]"
+      ],
+      "metadata": {
+        "id": "ngQLqvAh4TaC",
+        "outputId": "0a7fda17-430e-450a-d894-9a7123532327",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 306
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n\\text{Find} \\quad x \\quad \\text{where} \\quad y=6 \\\\[0.8em]\n\\frac {x+y}{2}=14 \\\\[0.8em]\n\\frac {x+6}{2}=14 \\\\[0.8em]\n2\\left({\\frac {x+6}{2}}\\right)=2(14) \\\\[0.8em]\nx+6=28 \\\\[0.8em]\nx+6-6=28-6 \\\\[0.8em]\nx=22 \\\\[0.8em]"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(x-3y)+2x=15\n",
+        "(x-3\\times 6)+2x=15\n",
+        "(x-18)+2x=15}(x-18)+2x=15}\n",
         "Dealing with the parentheses\n",
-        "{\\displaystyle x-18+2x=15}{\\displaystyle x-18+2x=15}\n",
+        "x-18+2x=15}x-18+2x=15}\n",
         "Taking down the parentheses is the most natural next move using PEMDAS\n",
-        "{\\displaystyle 3x-18=15}{\\displaystyle 3x-18=15}\n",
-        "Adding {\\displaystyle x+2x}{\\displaystyle x+2x}\n",
-        "{\\displaystyle 3x-18+18=15+18}{\\displaystyle 3x-18+18=15+18}\n",
+        "3x-18=15}3x-18=15}\n",
+        "Adding x+2x}x+2x}\n",
+        "3x-18+18=15+18}3x-18+18=15+18}\n",
         "Adding 18 to either side\n",
-        "{\\displaystyle 3x=33}{\\displaystyle 3x=33}\n",
+        "3x=33}3x=33}\n",
         "Taking down the parentheses\n",
-        "{\\displaystyle {\\frac {3x}{3}}={\\frac {33}{3}}}{\\displaystyle {\\frac {3x}{3}}={\\frac {33}{3}}}\n",
+        "\\frac {3x}{3}}={\\frac {33}{3}}}\\frac {3x}{3}}={\\frac {33}{3}}}\n",
         "Divide the multiplier to either side to emerge the solution\n",
-        "{\\displaystyle x=11}{\\displaystyle x=11}\n",
+        "x=11}x=11}\n",
         "And simplify to get the answer\n",
         "\n",
-        "{\\displaystyle {\\frac {15-y}{x}}=y^{2}}{\\displaystyle {\\frac {15-y}{x}}=y^{2}}\n",
-        "{\\displaystyle {\\frac {15-6}{x}}=6^{2}}{\\displaystyle {\\frac {15-6}{x}}=6^{2}}\n",
-        "Substitute {\\displaystyle y=6}{\\displaystyle y=6}\n",
-        "{\\displaystyle {\\frac {9}{x}}=36}{\\displaystyle {\\frac {9}{x}}=36}\n",
+        "\\frac {15-y}{x}}=y^{2}}\\frac {15-y}{x}}=y^{2}}\n",
+        "\\frac {15-6}{x}}=6^{2}}\\frac {15-6}{x}}=6^{2}}\n",
+        "Substitute y=6}y=6}\n",
+        "\\frac {9}{x}}=36}\\frac {9}{x}}=36}\n",
         "Parentheses\n",
-        "{\\displaystyle 9=36x}{\\displaystyle 9=36x}\n",
+        "9=36x}9=36x}\n",
         "Multiply by the denominator (x) on either side\n",
-        "{\\displaystyle x={\\frac {9}{36}}}{\\displaystyle x={\\frac {9}{36}}}\n",
+        "x={\\frac {9}{36}}}x={\\frac {9}{36}}}\n",
         "Divide the multiplier on either side\n",
-        "{\\displaystyle x={\\frac {1}{4}}}x={\\frac {1}{4}} or {\\displaystyle 0.25}{\\displaystyle 0.25}\n",
+        "x={\\frac {1}{4}}}x={\\frac {1}{4}} or 0.25}0.25}\n",
         "Simplify or divide fraction\n",
         "Practice Games\n",
         "http://www.math.com/school/subject2/S2U3Quiz.html\n",
@@ -1524,35 +1505,35 @@
         "Practice Problems\n",
         "Answer should be correct to two decimals - round up or down accordingly until the answer is correct to two decimals\n",
         "\n",
-        "Find {\\displaystyle x}x where {\\displaystyle y=9}{\\displaystyle y=9}\n",
-        "1{\\displaystyle x=8\\left({\\frac {y}{3}}\\right)}{\\displaystyle x=8\\left({\\frac {y}{3}}\\right)}\n",
+        "\\text{Find} \\quad x \\quad \\text{where} \\quad y=9}y=9}\n",
+        "1x=8\\left({\\frac {y}{3}}\\right)}x=8\\left({\\frac {y}{3}}\\right)}\n",
         "\n",
         "Answer:\n",
         "\n",
-        "2{\\displaystyle x-4=8+y}{\\displaystyle x-4=8+y}\n",
+        "2x-4=8+y}x-4=8+y}\n",
         "\n",
         "Answer:\n",
         "\n",
-        "3{\\displaystyle {\\frac {14+x}{y}}=3}{\\displaystyle {\\frac {14+x}{y}}=3}\n",
+        "3\\frac {14+x}{y}}=3}\\frac {14+x}{y}}=3}\n",
         "\n",
         "Answer:\n",
         "\n",
-        "4{\\displaystyle {\\frac {15-y}{x}}=y^{2}}{\\displaystyle {\\frac {15-y}{x}}=y^{2}}\n",
+        "4\\frac {15-y}{x}}=y^{2}}\\frac {15-y}{x}}=y^{2}}\n",
         "\n",
         "Answer:\n",
         "\n",
-        "5{\\displaystyle {\\frac {1+y^{2}}{x-4}}=17-y^{2}}{\\displaystyle {\\frac {1+y^{2}}{x-4}}=17-y^{2}}\n",
+        "5\\frac {1+y^{2}}{x-4}}=17-y^{2}}\\frac {1+y^{2}}{x-4}}=17-y^{2}}\n",
         "\n",
         "Answer:\n",
         "\n",
-        "6{\\displaystyle x+7-(y-9)=43y+3x-y^{2}}{\\displaystyle x+7-(y-9)=43y+3x-y^{2}}\n",
+        "6x+7-(y-9)=43y+3x-y^{2}}x+7-(y-9)=43y+3x-y^{2}}\n",
         "\n",
         "Answer:\n",
         "\n",
-        "7{\\displaystyle {\\frac {12-x(45-y)}{y^{2}-67}}=84}{\\displaystyle {\\frac {12-x(45-y)}{y^{2}-67}}=84}\n"
+        "7\\frac {12-x(45-y)}{y^{2}-67}}=84}\\frac {12-x(45-y)}{y^{2}-67}}=84}\n"
       ],
       "metadata": {
-        "id": "ngQLqvAh4TaC"
+        "id": "ygOOlCWwGthh"
       },
       "execution_count": null,
       "outputs": []
