Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPvbxBD1mQOdEEaIkl53JbO",
+      "authorship_tag": "ABX9TyNluxMqg0shCQipULJStRYt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# typescript をインストールする。4.6.4 が入る。node は 14.16.0 が既に入っている\n",
+        "# typescript をインストールする。4.7.4 が入る。node は 14.16.0 が既に入っている\n",
         "%%capture\n",
         "!npm install -g typescript\n",
         "!npm install --save-dev @types/node\n",
@@ -49,8 +49,31 @@
       "metadata": {
         "id": "cvDmmwL1W8Wl"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc --version"
+      ],
+      "metadata": {
+        "id": "tLQ2WzZtpWcw",
+        "outputId": "35d61dc5-73dc-45df-f583-61b2f102d6b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Version 4.7.4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -82,18 +105,18 @@
       ],
       "metadata": {
         "id": "Sos8UKrxYG7d",
-        "outputId": "238c9650-1fb1-4bb8-c286-5bbba148d176",
+        "outputId": "afd36d1a-a0a1-4357-e50e-ec2158963841",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting temp.ts\n"
+            "Writing temp.ts\n"
           ]
         }
       ]
@@ -4482,7 +4505,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4505,7 +4528,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4604,7 +4627,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4673,7 +4696,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4761,7 +4784,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
