Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNluxMqg0shCQipULJStRYt",
+      "authorship_tag": "ABX9TyN34hHs2o5jNll5/MQz0nnd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +48,7 @@
       "metadata": {
         "id": "cvDmmwL1W8Wl"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -59,12 +58,12 @@
       ],
       "metadata": {
         "id": "tLQ2WzZtpWcw",
-        "outputId": "35d61dc5-73dc-45df-f583-61b2f102d6b3",
+        "outputId": "cb11b93a-9548-420d-c1dd-832ba1b1400b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,12 +104,12 @@
       ],
       "metadata": {
         "id": "Sos8UKrxYG7d",
-        "outputId": "afd36d1a-a0a1-4357-e50e-ec2158963841",
+        "outputId": "45637c47-760a-4601-e048-b4b4bc0ad2c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,25 +123,52 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo there are 3 books.   英語   日本語 | node temp.js"
+        "!tsc temp.ts; echo there are 3 books.   英語   日本語 | node temp.js\n",
+        "!tsc temp.ts; echo -e 'there are 3 books.\\n   英語   日本語' | node temp.js"
       ],
       "metadata": {
         "id": "KMQ-v2w3YnRx",
-        "outputId": "8eda76ba-d905-4c34-ee5f-39d1565a85ae",
+        "outputId": "33d870b4-8ea9-4a48-d64c-80a202aa46b4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "[ \u001b[32m'there'\u001b[39m, \u001b[32m'are'\u001b[39m, \u001b[32m'3'\u001b[39m, \u001b[32m'books'\u001b[39m, \u001b[32m'英語'\u001b[39m, \u001b[32m'日本語'\u001b[39m ]\n",
             "[ \u001b[32m'there'\u001b[39m, \u001b[32m'are'\u001b[39m, \u001b[32m'3'\u001b[39m, \u001b[32m'books'\u001b[39m, \u001b[32m'英語'\u001b[39m, \u001b[32m'日本語'\u001b[39m ]\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile temp.ts\n",
+        "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
+        "let args : string[] = input.trim().split(/[\\n\\s,;.]+/)\n",
+        "console.log(args)"
+      ],
+      "metadata": {
+        "id": "5-U6SEuaDqqg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "qbxx9H7rDtIb"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
