Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNxvR5tqHBV0D/My2Ggi1H+",
+      "authorship_tag": "ABX9TyP9DxFXnarTIZ+EGAyJGU/P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "cvDmmwL1W8Wl"
       },
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -109,7 +109,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,7 +132,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +213,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +237,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -261,21 +261,12 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "JLWMC5ZJXumm"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 四則演算\n",
-        "# 加算減算乗算除算は普通。10/3 も普通に float になる。\n",
-        "# python の `//` に当たるのは `Math.floor()` かな。\n",
-        "# 冪乗は `**` で Python と同じ!!!!\n",
+        "# 加算減算乗算除算は普通。10/3 も普通に float になる\n",
+        "# python の `//` に当たるのは `Math.floor()` \n",
+        "# 冪乗は `**` で Python と同じ\n",
         "%%writefile temp.ts\n",
         "console.log(10 / 3); //=> 3.3333333333333335\n",
         "console.log(10 % 3); //=> 1\n",
@@ -287,12 +278,12 @@
       ],
       "metadata": {
         "id": "9Uy5HzVoSCoG",
-        "outputId": "44fddd23-c71e-4180-b408-eef9c7da1d49",
+        "outputId": "ef21de1e-0367-4e27-987b-4a51ae75b3d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,16 +297,16 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js "
+        "!tsc temp.ts; node temp.js "
       ],
       "metadata": {
         "id": "17QQAfLEzodJ",
-        "outputId": "ec312bc9-d54f-486d-9d75-b7f793471c6d",
+        "outputId": "fef13260-433b-4698-f48d-50d4a2ddfa81",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -348,18 +339,18 @@
       ],
       "metadata": {
         "id": "zhbUQ5NlKE66",
-        "outputId": "f3652a31-08f0-4a50-f39e-26bb63482383",
+        "outputId": "e974800f-d5c6-4336-e058-b67e71c13742",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing temp.ts\n"
+            "Overwriting temp.ts\n"
           ]
         }
       ]
@@ -367,16 +358,16 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js "
+        "!tsc temp.ts; node temp.js "
       ],
       "metadata": {
         "id": "rpCjE09i1bJg",
-        "outputId": "d2f1a40f-8458-484a-da60-6b62ad6054e6",
+        "outputId": "33d616f5-33d1-4c61-dadf-2997def69271",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,7 +381,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 質問 関数定義を let で出来るか。アロー関数式で書けばいいのか。\n",
+        "# 質問 関数定義を let で出来るか => アロー関数式で書く\n",
         "%%writefile temp.ts\n",
         "let checkGuess = (answer : number, guess : number) : string => {\n",
         "    if (answer == guess) {\n",
@@ -422,7 +413,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js "
+        "!tsc temp.ts; node temp.js "
       ],
       "metadata": {
         "id": "f2vFWuju0h1u",
@@ -473,7 +464,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js "
+        "!tsc temp.ts; node temp.js "
       ],
       "metadata": {
         "id": "A0wTpmAp3iUb",
@@ -502,9 +493,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cfdeabc1-df60-40aa-e2c9-6cf0883147ea"
+        "outputId": "56733d5c-daf9-42b4-9cda-17895a671017"
       },
       "source": [
+        "# splice の使い方\n",
         "%%writefile temp.ts\n",
         "const months = ['Jan', 'March', 'April', 'June'];\n",
         "months.splice(1, 0, 'Feb'); // inserts at index 1\n",
@@ -512,7 +504,7 @@
         "months.splice(4, 1, 'May'); // replaces 1 element at index 4\n",
         "console.log(months); // expected output: Array [\"Jan\", \"Feb\", \"March\", \"April\", \"May\"]"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,7 +518,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js "
+        "!tsc temp.ts; node temp.js "
       ],
       "metadata": {
         "id": "xfHR11pD3zJN",
@@ -548,13 +540,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "JLWMC5ZJXumm"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Gh_XIzVG-I3i",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "65856680-4c03-4e72-be4e-0447a216edeb"
+        "outputId": "28c52965-cf6b-4d9b-e6f1-9de15430cf02"
       },
       "source": [
         "# 多重配列\n",
@@ -565,7 +566,7 @@
         "x.splice(1,0,\"error!!!\");\n",
         "console.log(x);"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -579,16 +580,16 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js "
+        "!tsc temp.ts; node temp.js "
       ],
       "metadata": {
         "id": "goBAmBC44WWB",
-        "outputId": "1e951887-fce9-4c72-ebd1-d11ca2b99108",
+        "outputId": "cedf8c7e-189c-4b39-a0ce-1c7ace2430ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -606,7 +607,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f7b21563-f2d5-4ca3-c709-21b44bdd3591"
+        "outputId": "c860a293-0d87-4251-ce22-e9d9c67eb15b"
       },
       "source": [
         "# map 多重配列\n",
@@ -616,7 +617,7 @@
         "let b = Array(3).map(x => Array(2).fill(0))  // Array(3) の後の fill(0) がないと空になってしまう\n",
         "console.log(b)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -630,16 +631,16 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js "
+        "!tsc temp.ts; node temp.js "
       ],
       "metadata": {
         "id": "2v3F4l4T6dHF",
-        "outputId": "03595ded-acbd-41de-eb3a-05460601df67",
+        "outputId": "e97f7d71-b44e-4d82-b853-cb503da0fcb1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -690,7 +691,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js "
+        "!tsc temp.ts; node temp.js "
       ],
       "metadata": {
         "id": "baDa8cKD7kb1",
@@ -749,7 +750,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js "
+        "!tsc temp.ts; node temp.js "
       ],
       "metadata": {
         "id": "f4Hji-Yt8TYt",
@@ -957,7 +958,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "id": "A6zJEZohXLLD",
@@ -1016,7 +1017,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "colab": {
@@ -1140,7 +1141,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "id": "bSoSBtpSYL3L",
@@ -1206,7 +1207,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "id": "mziDNDzH3iXL",
@@ -1271,7 +1272,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "colab": {
@@ -1338,7 +1339,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "colab": {
@@ -1406,7 +1407,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "colab": {
@@ -1490,7 +1491,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "colab": {
@@ -1561,7 +1562,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "id": "VQDdGYatMCGY",
@@ -1651,7 +1652,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "colab": {
@@ -1729,7 +1730,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "id": "ub2n78ohwf6i",
@@ -1782,7 +1783,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "id": "26DEPvrvLDpd",
@@ -1836,7 +1837,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "id": "7tQeZ1KYE8g8",
@@ -1892,7 +1893,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "id": "QX7FuBDRbu67"
@@ -1950,7 +1951,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "id": "NcbvQTpAl09A",
@@ -2008,7 +2009,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "id": "-u3cNnGEnLzD",
@@ -2071,7 +2072,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "id": "Mba5YCMsMPib"
@@ -2279,7 +2280,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "id": "pRtGKz_fNy-M",
@@ -2331,7 +2332,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "id": "FekbavFEOOCt",
@@ -2383,7 +2384,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "id": "sL9NNdvTQY9v",
@@ -2439,7 +2440,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "id": "wdiXj4hdQ_El",
@@ -2491,7 +2492,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "id": "fBcty588O88-",
@@ -2614,7 +2615,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js "
+        "!tsc temp.ts; node temp.js "
       ],
       "metadata": {
         "id": "fEYRxDNJILsh",
@@ -3612,7 +3613,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; echo | node temp.js"
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "id": "rOCPCL-Ufa1T"
