Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP9DxFXnarTIZ+EGAyJGU/P",
+      "authorship_tag": "ABX9TyM46F9cRElUU72zoPTxtux9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "cvDmmwL1W8Wl"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -98,24 +98,26 @@
       "cell_type": "code",
       "source": [
         "# とりあえず入出力\n",
+        "# 拡張子 `.ts` のファイルを tsc でコンパイルすると `.js` ファイルが出来る\n",
+        "# node で実行する\n",
         "%%writefile temp.ts\n",
         "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
         "console.log(input)"
       ],
       "metadata": {
         "id": "KruQn6rTcs4V",
-        "outputId": "4585a2ce-a1f2-4937-8b24-de6d6a38ee7d",
+        "outputId": "38e19e24-e047-46c3-e189-c8fe51cda6df",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing temp.ts\n"
+            "Overwriting temp.ts\n"
           ]
         }
       ]
@@ -127,12 +129,12 @@
       ],
       "metadata": {
         "id": "D5uYgvndc8N1",
-        "outputId": "cf2f10b3-eb84-459a-93c2-a01e6148a7af",
+        "outputId": "282e57e5-1e8f-4fb8-9056-5200f8f8154c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +285,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +308,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,7 +346,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,7 +369,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -504,7 +506,7 @@
         "months.splice(4, 1, 'May'); // replaces 1 element at index 4\n",
         "console.log(months); // expected output: Array [\"Jan\", \"Feb\", \"March\", \"April\", \"May\"]"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -555,7 +557,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "28c52965-cf6b-4d9b-e6f1-9de15430cf02"
+        "outputId": "3f8b6da4-f1c8-4012-968b-1d012c253626"
       },
       "source": [
         "# 多重配列\n",
@@ -566,7 +568,7 @@
         "x.splice(1,0,\"error!!!\");\n",
         "console.log(x);"
       ],
-      "execution_count": 13,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -580,16 +582,16 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; node temp.js "
+        "!tsc temp.ts; node temp.js"
       ],
       "metadata": {
         "id": "goBAmBC44WWB",
-        "outputId": "cedf8c7e-189c-4b39-a0ce-1c7ace2430ab",
+        "outputId": "603f9632-caba-40f4-9df8-8e8d29a70d30",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -607,7 +609,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c860a293-0d87-4251-ce22-e9d9c67eb15b"
+        "outputId": "43ace176-5b22-46df-f712-4b8f6d673ba4"
       },
       "source": [
         "# map 多重配列\n",
@@ -617,7 +619,7 @@
         "let b = Array(3).map(x => Array(2).fill(0))  // Array(3) の後の fill(0) がないと空になってしまう\n",
         "console.log(b)"
       ],
-      "execution_count": 17,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -635,12 +637,12 @@
       ],
       "metadata": {
         "id": "2v3F4l4T6dHF",
-        "outputId": "e97f7d71-b44e-4d82-b853-cb503da0fcb1",
+        "outputId": "1012d8fa-30cc-40f2-d825-e2e8e43046fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -672,12 +674,12 @@
       ],
       "metadata": {
         "id": "qaGaLLw7IXG6",
-        "outputId": "70ade5ad-b91a-4542-c300-86adcf605f12",
+        "outputId": "690926d8-9018-42d1-cfac-5f9db7075978",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -691,16 +693,39 @@
     {
       "cell_type": "code",
       "source": [
-        "!tsc temp.ts; node temp.js "
+        "!ls"
       ],
       "metadata": {
-        "id": "baDa8cKD7kb1",
-        "outputId": "093b572c-10d9-4ad7-d20b-9a37777bc825",
+        "id": "jjomwwpCjsFh",
+        "outputId": "f4eaf944-28b5-4375-a8eb-0eaa0c0aa3f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "node_modules  package-lock.json  sample_data  temp.js  temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; node temp.js "
+      ],
+      "metadata": {
+        "id": "baDa8cKD7kb1",
+        "outputId": "084fb9ba-66bb-4dbd-b0d8-4f5e4dc020ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
