--- a/learnreact.ipynb
+++ b/learnreact.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "learnreact.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNixFusIOBJo69Be4ED6gPH",
+      "authorship_tag": "ABX9TyOAWxIS36RH88p/fm3vbLjl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,11 +74,11 @@
         "!tsc -v"
       ],
       "metadata": {
-        "id": "gwbGO1o9Ku7a",
-        "outputId": "7183fe62-7453-42b1-fb48-7cc2fb81e7aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gwbGO1o9Ku7a",
+        "outputId": "7183fe62-7453-42b1-fb48-7cc2fb81e7aa"
       },
       "execution_count": 7,
       "outputs": [
@@ -121,11 +121,11 @@
         "!ls"
       ],
       "metadata": {
-        "id": "zQpvQYqPOA_-",
-        "outputId": "7687da8b-bb7f-4a08-d949-a7ccc1951802",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zQpvQYqPOA_-",
+        "outputId": "7687da8b-bb7f-4a08-d949-a7ccc1951802"
       },
       "execution_count": 10,
       "outputs": [
@@ -141,10 +141,22 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# npm install -g create-react-app は必要なかった\n",
+        "# !cd app-dir;  npm start は local ではブラウザーが立ち上がるがここではダメ"
       ],
       "metadata": {
         "id": "71ThQ4KzOC75"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "dyHR0sTKPLpY"
       },
       "execution_count": null,
       "outputs": []
