--- a/learnreact.ipynb
+++ b/learnreact.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "learnreact.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMNGqoM5LRjnmTHxKMG2XvB",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNkZATmpZIcId1KlHdAaZyW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +33,8 @@
       "source": [
         "# メモ\n",
         "react本家チュートリアル https://ja.reactjs.org/tutorial/tutorial.html  \n",
-        "TypeScriptでReactに入門するチュートリアル https://qiita.com/yonetty/items/012be4c5c6258a609e35  \n"
+        "TypeScriptでReactに入門するチュートリアル https://qiita.com/yonetty/items/012be4c5c6258a609e35  \n",
+        "Reactの初期ページをGitHub Pagesで公開(デプロイ)する方法  "
       ],
       "metadata": {
         "id": "33yy7JdpxGYL"
